# clickup-agentic-native

./: .env.example  .gitignore  CONTEXT.md  LICENSE  NOTICE  README.md  SKILL.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml
.cursor/: mcp.example.json
docs/adr/: 0001-ephemeral-context-manifests-outside-the-repo.md
docs/icm/: ROUTER.md
docs/icm/stages/phase-1-5-context-manifest/: STAGE.md
docs/icm/stages/phase-1-6-catch-up-docs/: STAGE.md
docs/icm/stages/phase-1-truthful-discovery/: STAGE.md
examples/: github-actions-dev-sync.yml
references/: capabilities.md  dev-workflows.md  development-links.md  install-quickstart.md  mcp-cursor.md  milestone-runbook-validation.md  onboarding.md  quality-of-life-roadmap.md  setup.md
runs/qol-roadmap-implementation/: journal.md  probe-brief.md
scripts/: generate_tool_catalog.py  install-skill.sh  install.sh  quickstart.sh
src/clickup_agent/: __init__.py  __main__.py  cli.py  client.py  config.py  connect_cmd.py  context_loader.py  context_manifest.py  devlinks.py  devsync.py  discovery.py  markers.py  mcp_server.py  registry.py  requests.py  setup_cmd.py  toolchains.py  validation.py
src/clickup_agent/catalog/: __init__.py  tool_catalog.json
tests/: test_catalog_generation.py  test_cli_discovery.py  test_config.py  test_connect_cmd.py  test_context_loader.py  test_context_manifest.py  test_devlinks.py  test_doctor_live_auth.py  test_installation_confidence.py  test_markers.py  test_mcp_server.py  test_run_toolchains.py  test_setup_cmd.py
