[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "clickup-agentic-native"
version = "0.2.0"
description = "Agentic native ClickUp tooling exposed through the clickup-agent command."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "zenzenzen" }]
keywords = ["clickup", "agent", "mcp", "llm", "workflow"]
dependencies = [
  "httpx>=0.28.1,<1",
  "jsonschema>=4.26.0,<5",
  "mcp>=1.2.0,<2",
]

[project.scripts]
clickup-agent = "clickup_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clickup_agent = ["catalog/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
